<resources>
    <string name="app_name">Harbour Management System</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="btn">Save</string>

    <string name="welcome"> HARBOUR: Welcome</string>


    <!-- Splash screen -->

    <string name ="splashscreen"> Harbour Management</string>




    <string name="a">pic</string>
    <!-- package product -->


    <!-- Text View -->
    <string name = "pkgresIdView"></string>;
    <string name = "pkgCodeView">Package Product</string>;
    <string name = "pkgDateView">Package Date</string>;
    <string name = "pkgDescriptionView">Description</string>;
    <string name = "pkgItemTypeView">Item Type</string>;
    <string name = "pkgQuatityView">Quantity</string>;

    <string name = "btnSave">Save Package</string>;

    <!-- Edit Text-->

    <string name = "pkgresIdEditText"></string>;
    <string name = "pkgCodeEditText"></string>;
    <string name = "pkgDateEditText"></string>;
    <string name = "pkgDescriptionEditText"></string>;
    <string name = "pkgItemTypeEditText"></string>;
    <string name = "pkgQuatityEditText"></string>

    <string name="title_activity_main">Harbour Management System</string>

    <string name="title_activity_package_product">Package Product</string>

    <string name="title_activity_package_product_create_tab">Create Package Product
    </string>

    <string name="title_activity_package_product_read_tab">Read Package Product</string>

    <string name="title_activity_package_product_delete_tab">Delete Package Product
    </string>

    <string name="title_activity_package_product_update_tab">Update Package Product
    </string>

    <string name="title_activity_package_product_all_tab">All Package Products</string>


    <string name="title_activity_container">Container</string>
    <string name="title_activity_container_read_tab">Read Container</string>
    <string name="title_activity_container_create_tab">Create Container</string>
    <string name="title_activity_container_update_tab">Update Container</string>
    <string name="title_activity_container_delete_tab">Delete Container</string>
    <string name="title_activity_container_all_tab">All Containers</string>


    <string name="packages">Package Products</string>
    <string name="packageCodeText">Package Code</string>
    <string name="savebtn">Save</string>
    <string name="descriptionTextView">Package Description</string>
    <string name="itemTypeTextView">Item Type</string>
    <string name="quantityTextView">Quantity</string>

    <string name="dateTextView">Package Date</string>

    <string name="hello">Hello World, CreateTable!</string>
    <string name="table">CreateTableRows Dynamically CoderzHeaven.com</string>
    <string name="IDtextView">ID :</string>
    <string name="code">Code</string>
    <string name="description">Description</string>
    <string name="itemtype">Item Type</string>
    <string name="date">Date</string>
    <string name="quantity">Quantity</string>
    <string name="id">ID</string>
    <string name="delCode">Code</string>
    <string name="delDecri">Description</string>
    <string name="delButton">Delete</string>
    <string name="updateID">ID</string>
    <string name="updateCode">Code</string>
    <string name="updateDescr">Description</string>
    <string name="updateDate">Date</string>
    <string name="updateItemType">Item Type
    </string>
    <string name="updateQuantity">Quantity</string>
    <string name="bntUpdate">Update</string>


    <!-- Container -->



    <!-- Terminal -->




    <!-- Warehouse -->





    <!-- Dock -->



    <!-- Cargo -->





    <!-- Logistic Company -->






    <!-- Port -->


</resources>
